--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "12.2.1",
+  "version": "12.2.0",
   "name": "react-native-svg",
   "description": "SVG library for react-native",
   "homepage": "https://github.com/react-native-community/react-native-svg",
@@ -77,9 +77,9 @@
     "eslint-plugin-flowtype": "^4.6.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
-    "flow-bin": "^0.119.1",
-    "flow-typed": "^3.0.0",
-    "flowgen": "^1.10.0",
+    "flow-bin": "0.119.1",
+    "flow-typed": "3.0.0",
+    "flowgen": "1.10.0",
     "jest": "^25.1.0",
     "pegjs": "^0.10.0",
     "prettier": "^1.19.1",
